--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,8 @@ jobs:
 
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v4
+      with:
+        path: '.'
 
     - name: deploy to github pages
       id: deployment
